apps/gpt-chat/base/gpt-chat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gpt-chat-web
  labels:
    app: gpt-chat-web
    tier: app
spec:
  type: NodePort
  ports:
    - port: 3000
  selector:
    app: gpt-chat-web
    tier: app
